420397 fix some findbugs warnings
- remove unnecessary null checks
- make sure streams are closed in finally block
- equals() comparison with incompatible type
- equals() without hashCode() - just generate both methods
- inefficient Integer() constructor
- remove unused private methods
- avoid catch Throwable/Exception
- boolean expression simplification
- make non-final fields used as constants final
- reduce visibility of public final arrays

Bug: 420397
Change-Id: I7024f0002fa4e5d434db45e1fb3c8be7af245cd7
Signed-off-by: Jan Sievers <jan.sievers@sap.com>